<resources>
    <string name="app_name">EnginnerBabuSample</string>
    <string name="facebook_app_id">300090964244860</string>
    <string name="fb_login_protocol_scheme">fb300090964244860</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="empty_not_saved">NotSaved</string>
    <string name="save_user">Save</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="employes_data_enter">Employes Data Enter</string>
    <string name="user_profile">User Profile</string>
    <string name="profile_save">Profile Save</string>
    <string name="face_book_status">Face book status :</string>
    <string name="wel_come_enginner_babu_sample">Well Come Engineer Babu Sample</string>
    <string name="start_phone_auth">Start Auth</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="enter_verify_code">Verify Code</string>

</resources>
