<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_left_16dp"
    tools:context="com.example.engineerbabusample.Activity.ProfileUpdateActivity">
    <ImageView
        android:tint="@color/colorSecondary"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:layout_margin="@dimen/padding_left_16dp"
        android:layout_gravity="center"
        android:id="@+id/iv_user_profile"
        android:layout_width="80dp"
        android:scaleType="fitXY"
        android:layout_height="80dp" />
    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/padding_left_16dp"
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:hint="@string/enter_username" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/padding_left_16dp"
        android:id="@+id/email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_email_rname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:hint="@string/enter_email" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/padding_left_16dp"
        android:id="@+id/mobile_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_mobile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:lines="1"
            android:maxLength="10"
            android:lineSpacingExtra="4dp"
            android:imeOptions="actionDone"
            android:hint="@string/enter_mobile" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/padding_left_16dp"
        android:id="@+id/auth_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/sms_code_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:lines="1"
            android:lineSpacingExtra="4dp"
            android:imeOptions="actionDone"
            android:hint="@string/enter_verify_code" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/start_auth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_wh"
        android:text="@string/start_phone_auth"
        android:textColor="#fff" />
    <Button
        android:visibility="gone"
        android:id="@+id/verify_auth_button"
        android:layout_width="match_parent"
        android:background="@drawable/button_wh"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/verify_phone_auth"
        android:textColor="#fff" />
    <RelativeLayout
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/text_size_18sp"
            android:text="@string/profile_save"
            android:textColor="@color/white"
            android:background="@drawable/button_wh"
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>
