<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_left_16dp"
    tools:context=".Fragment.UserProfileStoreFragment">
    <TextView
        android:background="@color/messageReceived"
        android:gravity="center"
        android:textColor="@color/colorSecondary"
        android:textSize="25sp"
        android:text="@string/employes_data_enter"
        android:layout_width="match_parent"
        android:layout_height="100dp" />
    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/padding_left_16dp"
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:hint="@string/enter_username" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/padding_left_16dp"
        android:id="@+id/user_email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etUser_email"
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/padding_left_16dp"
        android:id="@+id/user_mobile_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etUser_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:ems="10"
            android:maxLength="10"
            android:inputType="number"
            android:hint="@string/enter_mobile" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:paddingBottom="@dimen/padding_left_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/padding_left_16dp"
            android:layout_width="match_parent"
            android:text="@string/save_user"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_18sp"
            style="@style/button_wh"
            android:id="@+id/butom_save_user_date"
            android:layout_height="50dp" />
    </RelativeLayout>

</LinearLayout>